log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri 31 Mar 2023 05:39:11 PM UTC: 
 tests:  0|6
total_score: 0/70
e6c1669
Fri 31 Mar 2023 05:50:38 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:36: error: expected ‘)’ before ‘;’ token
   17 |   list->data = malloc(sizeof(void*);
      |                      ~             ^
      |                                    )
arraylist.c:18:15: error: expected ‘;’ before ‘}’ token
   18 |   return list;
      |               ^
      |               ;
   19 | }
      | ~              
arraylist.c:19:1: error: control reaches end of non-void function [-Werror=return-type]
   19 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8bb3d5a
Fri 31 Mar 2023 05:50:52 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d636477
Fri 31 Mar 2023 05:54:05 PM UTC: 
 arraylist.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
65eee5c
Fri 31 Mar 2023 05:54:38 PM UTC: 
 arraylist.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
e6014a3
Fri 31 Mar 2023 05:56:58 PM UTC: 
 arraylist.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
419a06f
Fri 31 Mar 2023 05:57:22 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a80d434
Fri 31 Mar 2023 06:01:13 PM UTC: 
 arraylist.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
48d0f99
